feat: :sparkles: Added images.

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,4 @@
-@import "/src/styles/layout/footer";
-@import "/src/styles/layout/grid";
-@import "/src/styles/layout/header";
-@import "/src/styles/layout/navigation";
+// @use "@styles/layout/footer";
+// @use "@styles/layout/grid";
+// @use "@styles/layout/header";
+// @use "@styles/layout/navigation";
